# ecommerce_loader

./: .gitignore  Dockerfile  docker-compose.yaml  find_invalid_utf8.py  hello.py  products_list.csv  pyproject.toml  requirements.txt
backend/: main.py
backend/api/: endpoints.py
backend/crewai/: agents.py  crew_products.py  crew_stores.py  tasks.py  tools.py
backend/crewai/db/: insert_affiliate_stores.py  insert_product_list.py  session.py
backend/crewai/models/: affiliate_store.py  products.py
backend/crewai/schemas/: affiliate_store.py  product.py
backend/crewai/tools/: autodetect_product_selectors_tool.py  count_html_structures_tool.py  debug_logger.py  tools.py
frontend/: index.html
