[project]
name = "ecommerce-loader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.121.0",
    "crewai-tools>=0.45.0",
    "fastapi-cors>=0.0.6",
    "fastapi[all]>=0.115.12",
    "jinja2>=3.1.6",
    "nest-asyncio>=1.6.0",
    "playwright>=1.52.0",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.5",
    "requests>=2.32.3",
    "selenium>=4.33.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.2",
    "webdriver-manager>=4.0.2",
]

[dependency-groups]
dev = [
    "chardet>=5.2.0",
    "isort>=6.0.1",
]
